<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Promillekollen</string>
    <string name="menu_settings">Settings</string>
    <string name="back">Tillbaka</string>
    <string name="number_of_beers">Hur många öl/cider (5,2%, 33 cl)?</string>
    <string name="number_of_shots">Hur många shots (4 cl)?</string>
    <string name="number_of_drinks">Hur många drinkar (4 cl)?</string>
    <string name="number_of_wine_glasses">Hur många glas vin (12%, 15 cl)?</string>
    <string name="weight">Hur mycket väger du?</string>
    <string name="button_send">Räkna ut promillehalt!</string>
    <string name="number_of_hours">I hur många timmar har du druckit?</string>
    <string name="title_activity_main">Promillekollen</string>
    <string name="title_activity_display_message">Promillekollen</string>

</resources>