<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/gridLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:alignmentMode="alignMargins"
	android:columnCount="1"
	android:columnOrderPreserved="true"
	android:orientation="vertical"
	android:rowCount="6"
	android:rowOrderPreserved="true" >
    
    <EditText
        android:id="@+id/number_of_beers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.98"
        android:hint="@string/number_of_beers" />
    
    <EditText
        android:id="@+id/number_of_shots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.98"
        android:hint="@string/number_of_shots" />
    
    <EditText
        android:id="@+id/number_of_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.97"
        android:hint="@string/number_of_drinks" />
    
    <EditText
        android:id="@+id/number_of_wine_glasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.99"
        android:hint="@string/number_of_wine_glasses" />
    
    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.99"
        android:hint="@string/weight" />
    
    <EditText
        android:id="@+id/number_of_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.01"
        android:hint="@string/number_of_hours" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button_send" 
        android:onClick="sendUserInput" />
    
    
</LinearLayout>